--- a/OnlineExaminationSystem/Views/Account/_PartialLogin.cshtml
+++ b/OnlineExaminationSystem/Views/Account/_PartialLogin.cshtml
@@ -11,6 +11,6 @@
     }
     else
     {
-        <li>@Html.ActionLink("Login", "Login")</li>
+        <li><a href="/Account/Login">Login</a></li>
     }
 </ul>
