--- a/OnlineExaminationSystem/Views/Home/About.cshtml
+++ b/OnlineExaminationSystem/Views/Home/About.cshtml
@@ -1,7 +1,114 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+<!--start-about-->
+<div class="about">
+    <div class="container">
+        <div class="about-main">
+            <h3>A Few Words About Us</h3>
+            <h5>Uspendisse laoreet nibh ac cursus vestibulum. Vestibulum eu arcu at justo tristique malesuada. Aliquam erat volutpat. Vivamus condimentum feugiat magna</h5>
+            <p>Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orc i ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus.</p>
+            <div class="about-text">
+                <div class="col-md-4 about-text-left">
+                    <img src="/images/st-1.jpg" alt="">
+                    <h5>What We Do</h5>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam et dignissim augue, et sagittis turpis. Vestibulum congue turpis ac tincidunt accumsan.</p>
+                    <div class="tool">
+                        <a class="tooltips" href="#">
+                            <span>Read More</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 about-text-left">
+                    <img src="/images/st-2.jpg" alt="">
+                    <h5>Our Capabilities</h5>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam et dignissim augue, et sagittis turpis. Vestibulum congue turpis ac tincidunt accumsan.</p>
+                    <div class="tool">
+                        <a class="tooltips" href="#">
+                            <span>Read More</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 about-text-left">
+                    <img src="/images/st-4.jpg" alt="">
+                    <h5>Our Standards</h5>
+                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam et dignissim augue, et sagittis turpis. Vestibulum congue turpis ac tincidunt accumsan.</p>
+                    <div class="tool">
+                        <a class="tooltips" href="#">
+                            <span>Read More</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--end-about-->
+<!--start-vision-->
+<div class="success">
+    <div class="container">
+        <div class="success-main">
+            <div class="col-md-8 success-left">
+                <h3>Few Strategies For Success</h3>
+                <div class="success-bottom">
+                    <div class="success-bottom-left">
+                        <h6>1</h6>
+                    </div>
+                    <div class="success-bottom-right">
+                        <h5>Excepteur sint occaecat cupidatat non proident</h5>
+                        <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit. Integer tristique eu mauris sed auctor. Cras in eros lobortis, consequat quam tincidunt, fermentum risus. Aenean eleifend interdum mauris, at mattis metus venenatis interdum. Suspendisse eu luctus nisl, sed condimentum mauris.</p>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="success-bottom">
+                    <div class="success-bottom-left">
+                        <h6>2</h6>
+                    </div>
+                    <div class="success-bottom-right">
+                        <h5>Integer tristique eu mau ris sed auctor</h5>
+                        <p>Excepteur sint occaecat cupidatat non proident. Lorem ipsum dolor sit amet conse ctetur adipisicing elit. Integer tristi que eu mauris sed auctor. Cras in eros lobortis, consequat quam tincidunt, fermentum risus. Aenean eleifend interdum mauris, at mattis metus venenatis interdum.</p>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="success-bottom">
+                    <div class="success-bottom-left">
+                        <h6>3</h6>
+                    </div>
+                    <div class="success-bottom-right">
+                        <h5>luctus nisl sed condimentum maurim sociis</h5>
+                        <p>Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel. Cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat.consequat quam tincidunt, fermentum risus. Aenean eleifend interdum mauris, at mattis metus venenatis interdum.</p>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="success-bottom">
+                    <div class="success-bottom-left">
+                        <h6>4</h6>
+                    </div>
+                    <div class="success-bottom-right">
+                        <h5>Aenean eleifend interdum mauris,</h5>
+                        <p>Ut tellus dolor, dapibus eget, elemen tum vel. Cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolo.consequat quam tincidunt, fermentum risus. Aenean eleifend interdum mauris, at mattis metus venenatis interdum.</p>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+            <div class="col-md-4 success-right">
+                <h3>Our Mission,Vision and Values</h3>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing eli</h4>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. Lorem ipsum dolor sit amet conse ctetur adipisicing elit. Integer tristique eu mauris.</p>
+                <h6>Our Mission</h6>
+                <p>Curabitur dictum ultricies scelerisque. Praesent pretium sodales orci, sit amet posuere odio feugiat ut. Nullam pellentesque pulvinar elementum. Vestibulum commodo augue nisl, ac porttitor nibh tincidunt in.</p>
+                <h6>Values</h6>
+                <ul>
+                    <li><a href="#">In faucibus orciluctus</a></li>
+                    <li><a href="#">Aenean nonummy hendrerit</a></li>
+                    <li><a href="#">Vestibulum congue ut porta</a></li>
+                    <li><a href="#">nascetur ridiculus mus</a></li>
+                    <li><a href="#">Pellentesque sed dolor</a></li>
+                </ul>
+            </div>
+            <div class="clearfix"> </div>
+        </div>
+    </div>
+</div>
+<!--end-vision-->
