--- a/OnlineExaminationSystem/Views/Home/Index.cshtml
+++ b/OnlineExaminationSystem/Views/Home/Index.cshtml
@@ -1,95 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
-    Layout = null;
+    ViewBag.Title = "Home";
+    ViewBag.BannerClass = "banner";
 }
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE html>
-<html>
-<head>
-    <title>The Learn Center Flat Responsive Education Website Template | Home :: w3layouts</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="application/x-javascript">
-        addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
-    </script>
-    <meta name="keywords" content="Bootstrap Responsive Templates, Iphone Compatible Templates, Smartphone Compatible Templates, Ipad Compatible Templates, Flat Responsive Templates" />
-    @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/themes/base/css")
-    @Styles.Render("~/Content/LearnCenter")
-    
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    
-    
-</head>
-<body>
-    <div class="banner" id="home">
-        <div class="container">
-            <div class="header">
-                <div class="menu">
-                    <a class="toggleMenu" href="#"><img src="images/menu-icon.png" alt="" /> </a>
-                    <ul class="nav" id="nav">
-                        <li class="active"><a href="index.html" class="active">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="academics.html">Academics</a></li>
-                        <li><a href="admissions.html">Admissions</a></li>
-                        <li><a href="courses.html">Courses</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-            <!--/start-text-slider-->
-            <div class="testimonials" id="testimonials">
-                <div class="wmuSlider example1">
-                    <div class="container-flueid">
-                        <article style="position: absolute; width:64%; opacity: 0;">
-                            <div class=" cont span_2_of_3 client-main">
-                                <div class="logo">
-                                    <a href="#"><img src="images/logo.png" alt=""></a>
-                                </div>
-                                <div class="slide-text">
-                                    <p>Suspendisse commodo tempor sagittis! In justo est, sollicitudin eu scelerisque pretium, placerat.</p>
-                                    <span> </span>
-                                </div>
-                                <div class="clearfix"> </div>
-                            </div>
-                        </article>
-                        <article style="position: absolute; width:64%; opacity: 0;">
-                            <div class=" cont span_2_of_3  client-main">
-                                <div class="logo">
-                                    <a href="#"><img src="images/logo.png" alt=""></a>
-                                </div>
-                                <div class="slide-text">
-                                    <p>Suspendisse eget lobortis lacus, et elementum tortor. Praesent metus ligula, lacinia eu sodales sed,</p>
-                                    <span> </span>
-                                </div>
-                                <div class="clearfix"> </div>
-                            </div>
-                        </article>
-                        <article style="position: absolute; width:64%; opacity: 0;">
-                            <div class="cont span_2_of_3  client-main">
-                                <div class="logo">
-                                    <a href="#"><img src="images/logo.png" alt=""></a>
-                                </div>
-                                <div class="slide-text">
-                                    <p>Vitae pellentesque nec, pharetra a orci. Praesent nunc nunc, egestas eget elementum sed; rutrum!</p>
-                                    <span> </span>
-                                </div>
-                                <div class="clearfix"> </div>
-                            </div>
-                        </article>
 
-                       
-                    </div>
-                </div>
-            </div>
-            <!--//text-slider-->
-        </div>
-    </div>
+
     <!--start-welcome-->
     <div class="welcome">
         <div class="container">
@@ -338,81 +252,54 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </div>
     <!--start-staff-->
-    <!--start-footer-->
-    <div class="footer">
-        <div class="container">
-            <div class="footer-main">
-                <div class="col-md-6 footer-left">
-                    <ul>
-                        <li><a href="#"><span class="fb"> </span></a></li>
-                        <li><a href="#"><span class="twit"> </span></a></li>
-                        <li><a href="#"><span class="in"> </span></a></li>
-                    </ul>
+
+@section testimonials
+{
+    <!--/start-text-slider-->
+<div class="testimonials" id="testimonials">
+    <div class="wmuSlider example1">
+        <div class="container-flueid">
+            <article style="position: absolute; width:64%; opacity: 0;">
+                <div class=" cont span_2_of_3 client-main">
+                    <div class="logo">
+                        <a href="#"><img src="images/logo.png" alt=""></a>
+                    </div>
+                    <div class="slide-text">
+                        <p>Suspendisse commodo tempor sagittis! In justo est, sollicitudin eu scelerisque pretium, placerat.</p>
+                        <span> </span>
+                    </div>
+                    <div class="clearfix"> </div>
                 </div>
-                <div class="col-md-6 footer-right">
-                    <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+            </article>
+            <article style="position: absolute; width:64%; opacity: 0;">
+                <div class=" cont span_2_of_3  client-main">
+                    <div class="logo">
+                        <a href="#"><img src="images/logo.png" alt=""></a>
+                    </div>
+                    <div class="slide-text">
+                        <p>Suspendisse eget lobortis lacus, et elementum tortor. Praesent metus ligula, lacinia eu sodales sed,</p>
+                        <span> </span>
+                    </div>
+                    <div class="clearfix"> </div>
                 </div>
-                <div class="clearfix"> </div>
-            </div>
+            </article>
+            <article style="position: absolute; width:64%; opacity: 0;">
+                <div class="cont span_2_of_3  client-main">
+                    <div class="logo">
+                        <a href="#"><img src="images/logo.png" alt=""></a>
+                    </div>
+                    <div class="slide-text">
+                        <p>Vitae pellentesque nec, pharetra a orci. Praesent nunc nunc, egestas eget elementum sed; rutrum!</p>
+                        <span> </span>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+            </article>
+
+
         </div>
-        
-        <a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
     </div>
-    <!--end-footer-->
-
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryui")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/LearnCenter")
-    <script type="text/javascript">
-    jQuery(document).ready(function ($) {
-        $(".scroll").click(function (event) {
-            event.preventDefault();
-            $('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1000);
-        });
-    });
-    </script>
-    @Scripts.Render("~/bundles/jquery/controls")
-    <!----start-top-nav-script---->
-    <script type="text/javascript">
-        jQuery(document).ready(function ($) {
-            $(".scroll").click(function (event) {
-                event.preventDefault();
-                $('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1000);
-            });
-        });
-    </script>
-    <!----//End-top-nav-script---->
-    <script>
-        $('.example1').wmuSlider();
-    </script>
-
-    <script type="text/javascript">
-        $('#ca-container').contentcarousel();
-    </script>
-
-    <script type="text/javascript">
-    $(document).ready(function () {
-        /*
-        var defaults = {
-            containerID: 'toTop', // fading element id
-            containerHoverID: 'toTopHover', // fading element hover id
-            scrollSpeed: 1200,
-            easingType: 'linear'
-        };
-        */
-
-        $().UItoTop({ easingType: 'easeOutQuart' });
-
-    });
-    </script>
-
-
-
-
-
-
-
-</body>
-</html>
+</div>
+<!--//text-slider-->
+    }
+    
