--- a/OnlineExaminationSystem/Views/Shared/_Layout.cshtml
+++ b/OnlineExaminationSystem/Views/Shared/_Layout.cshtml
@@ -1,45 +1,119 @@
-﻿<!DOCTYPE html>
+﻿<!--A Design by W3layouts
+Author: W3layout
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Online Exameniation System</title>
+    <title>Online Examination System | @ViewBag.Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="application/x-javascript">
+        addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
+    </script>
+    <meta name="keywords" content="Bootstrap Responsive Templates, Iphone Compatible Templates, Smartphone Compatible Templates, Ipad Compatible Templates, Flat Responsive Templates" />
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/themes/base/css")
+    @Styles.Render("~/Content/LearnCenter")
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="@ViewBag.BannerClass" id="home">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Online Examination System", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <div class="header">
+                <div class="menu">
+                    <a class="toggleMenu" href="#"><img src="images/menu-icon.png" alt="" /> </a>
+                    <ul class="nav" id="nav">
+                        <li class="@((ViewBag.Title == "Home") ? "active" : "")"><a href="/">Home</a></li>
+                        <li class="@((ViewBag.Title == "About") ? "active" : "")"><a href="/home/about">About</a></li>
+                        <li class="@((ViewBag.Title == "Courses") ? "active": "")"><a href="/home/courses">Courses</a></li>
+                        <li class="@((ViewBag.Title == "Contact") ? "active" : "")"><a href="/home/contact">Contact</a></li>
+                        <li class="@((ViewBag.Title == "Administration") ? "active" : "")"><a href="/home/Administration" target="_blank">Administration</a></li>
+                    </ul>
+                </div>
+                <div class="clearfix"> </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    @RenderSection("links", false)
-                </ul>
-                @Html.Action("_PartialLogin", "Account")
-            </div>
+            @RenderSection("testimonials", false)
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    @RenderBody()
+    <!--start-footer-->
+    <div class="footer">
+        <div class="container">
+            <div class="footer-main">
+                <div class="col-md-6 footer-left">
+                    <ul>
+                        <li><a href="#"><span class="fb"> </span></a></li>
+                        <li><a href="#"><span class="twit"> </span></a></li>
+                        <li><a href="#"><span class="in"> </span></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 footer-right">
+                    <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+        </div>
 
+        <a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+    </div>
+    <!--end-footer-->
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/LearnCenter")
+    <script type="text/javascript">
+        jQuery(document).ready(function ($) {
+            $(".scroll").click(function (event) {
+                event.preventDefault();
+                $('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1000);
+            });
+        });
+    </script>
+    @Scripts.Render("~/bundles/jquery/controls")
+    <!----start-top-nav-script---->
+    <script type="text/javascript">
+        jQuery(document).ready(function ($) {
+            $(".scroll").click(function (event) {
+                event.preventDefault();
+                $('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1000);
+            });
+        });
+    </script>
+    <!----//End-top-nav-script---->
+    <script>
+        $('.example1').wmuSlider();
+    </script>
+
+    <script type="text/javascript">
+        $('#ca-container').contentcarousel();
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            /*
+            var defaults = {
+                containerID: 'toTop', // fading element id
+                containerHoverID: 'toTopHover', // fading element hover id
+                scrollSpeed: 1200,
+                easingType: 'linear'
+            };
+            */
+
+            $().UItoTop({ easingType: 'easeOutQuart' });
+
+        });
+    </script>
+
+    @RenderSection("Scripts", false)
+
+
+
+
+
 </body>
 </html>
