--- a/OnlineExaminationSystem/Views/Shared/_Layout.cshtml
+++ b/OnlineExaminationSystem/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <li class="@((ViewBag.Title == "About") ? "active" : "")"><a href="/home/about">About</a></li>
                         <li class="@((ViewBag.Title == "Courses") ? "active": "")"><a href="/home/courses">Courses</a></li>
                         <li class="@((ViewBag.Title == "Contact") ? "active" : "")"><a href="/home/contact">Contact</a></li>
-                        <li class="@((ViewBag.Title == "Administration") ? "active" : "")"><a href="/home/Administration" target="_blank">Administration</a></li>
+                        <li class="@((ViewBag.Title == "Administration") ? "active" : "")"><a href="/home/Administration">Administration</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
