--- a/OnlineExaminationSystem/Views/Home/Administration.cshtml
+++ b/OnlineExaminationSystem/Views/Home/Administration.cshtml
@@ -1,12 +1,65 @@
-﻿@{
+﻿@model OnlineExaminationSystem.Models.LoginModel
+@{
     ViewBag.Title = "Administration";
-    ViewBag.BannerClass = "banner";
+    ViewBag.BannerClass = "banner administration";
 }
 
 @section testimonials
 {
     <!--/start-text-slider-->
     <div class="testimonials" id="testimonials">
-        @Html.Action("Login", "Account")
+
+        <div class="container">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-4" })
+                        <div class="col-md-6">
+                            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-4" })
+                        <div class="col-md-6">
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-offset-4 col-md-4">
+                            <div class="row">
+                                <div class="col-sm-1">
+                                    <div class="checkbox">
+                                        @Html.EditorFor(model => model.RememberMe)
+                                        @Html.ValidationMessageFor(model => model.RememberMe, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-md-1">
+                                    @Html.LabelFor(model => model.RememberMe, htmlAttributes: new { @class = "control-label" })
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-offset-4 col-md-6">
+                            <input type="submit" value="Login" class="btn btn-default" />
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
     </div>
 }
