update admin link

--- a/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Edit.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Admin
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Administrators";
+    ViewBag.Page = "admin";
 }
 
 <h2>Edit</h2>
