--- a/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<OES.Model.Users.Admin>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Administrators";
+    ViewBag.Page = "admin";
 }
 
 <h2>Admininstrators</h2>
