--- a/OnlineExaminationSystem/Areas/Administrator/Views/Courses/Delete.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Courses/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Course
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "courses";
+    ViewBag.Page = "courses";
 }
 
 <h2>Delete</h2>
