--- a/OnlineExaminationSystem/Areas/Administrator/Views/Courses/Details.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Courses/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Course
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "courses";
+    ViewBag.Page = "courses";
 }
 
 <h2>Details</h2>
