--- a/OnlineExaminationSystem/Areas/Administrator/Views/Courses/Edit.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Courses/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Course
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "courses";
+    ViewBag.Page = "courses";
 }
 
 <h2>Edit</h2>
