--- a/OnlineExaminationSystem/Areas/Administrator/Views/Courses/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Courses/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<OES.Model.Examination.Course>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "courses";
+    ViewBag.Page = "courses";
 }
 <h2>Courses</h2>
 
