--- a/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Delete.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Instructor
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "instructor";
+    ViewBag.Page = "instructors";
 }
 
 <h2>Delete</h2>
