--- a/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<OES.Model.Users.User>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "instructor";
+    ViewBag.Page = "instructors";
 }
 <h2>Instructors</h2>
 
