--- a/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Edit.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Registration
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "registration";
+    ViewBag.Page = "registrations";
 }
 
 <h2>Edit</h2>
