--- a/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Students.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Students.cshtml
@@ -1,6 +1,7 @@
 ﻿@model OnlineExaminationSystem.Areas.Administrator.Models.StudentsRegistration
 @{
-    ViewBag.Title = "Students";
+    ViewBag.Title = "registration";
+    ViewBag.Page = "registrations";
 }
 <h2>Student Registration</h2>
 <div class="form-horizontal">
