--- a/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Create.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Semester
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "courses";
+    ViewBag.Page = "courses";
 }
 
 <h2>Create</h2>
