--- a/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Delete.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Semester
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Semesters";
+    ViewBag.Page = "semester";
 }
 
 <h2>Delete</h2>
