--- a/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Edit.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Semester
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Semesters";
+    ViewBag.Page = "semester";
 }
 
 <h2>Edit</h2>
