--- a/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<OES.Model.Examination.Semester>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Semesters";
+    ViewBag.Page = "semester";
 }
 <h2>Semesters</h2>
 
