--- a/OnlineExaminationSystem/Areas/Administrator/Views/Students/Create.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Students/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Student
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "student";
+    ViewBag.Page = "students";
 }
 
 <h2>Create</h2>
