--- a/OnlineExaminationSystem/Areas/Administrator/Views/Students/Edit.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Students/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Student
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "student";
+    ViewBag.Page = "students";
 }
 
 <h2>Edit</h2>
