--- a/OnlineExaminationSystem/Areas/Administrator/Views/Students/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Students/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<OES.Model.Users.Student>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "student";
+    ViewBag.Page = "students";
 }
 <h2>Students</h2>
 
