--- a/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Create.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Admin
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Administrators";
+    ViewBag.Page = "admin";
 }
 
 <h2>Create</h2>
