--- a/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Delete.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Admin
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Administrators";
+    ViewBag.Page = "admin";
 }
 
 <h2>Delete</h2>
