--- a/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Details.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Admin
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Administrators";
+    ViewBag.Page = "admin";
 }
 
 <h2>Details</h2>
