--- a/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Create.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Instructor
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "instructor";
+    ViewBag.Page = "instructors";
 }
 
 <h2>Create</h2>
