--- a/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Details.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Instructor
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "instructor";
+    ViewBag.Page = "instructors";
 }
 
 <h2>Details</h2>
