--- a/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Edit.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Instructors/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Instructor
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "instructor";
+    ViewBag.Page = "instructors";
 }
 
 <h2>Edit</h2>
