--- a/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Create.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Registration
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "registration";
+    ViewBag.Page = "registrations";
 }
 
 <h2>Create</h2>
