--- a/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Delete.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Registration
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "registration";
+    ViewBag.Page = "registrations";
 }
 
 <h2>Delete</h2>
