--- a/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Registration/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<OES.Model.Examination.Registration>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "registration";
+    ViewBag.Page = "registrations";
 }
 
 <h2>Index</h2>
