--- a/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Details.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Semesters/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Examination.Semester
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Semesters";
+    ViewBag.Page = "semester";
 }
 
 <h2>Details</h2>
