--- a/OnlineExaminationSystem/Areas/Administrator/Views/Students/Delete.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Students/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Student
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "student";
+    ViewBag.Page = "students";
 }
 
 <h2>Delete</h2>
