--- a/OnlineExaminationSystem/Areas/Administrator/Views/Students/Details.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Students/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OES.Model.Users.Student
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "student";
+    ViewBag.Page = "students";
 }
 
 <h2>Details</h2>
