Add instructor base controller

--- a/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Index.cshtml
+++ b/OnlineExaminationSystem/Areas/Administrator/Views/Admins/Index.cshtml
@@ -16,6 +16,7 @@
             <div class="dataTables_length" id="dataTables-example_length">
                 <label>
                     <select name="dataTables-example_length" aria-controls="dataTables-example" class="form-control input-sm">
+                        <option value="5">5</option>
                         <option value="10">10</option>
                         <option value="25">25</option>
                         <option value="50">50</option>
