Implement adding answers

--- a/OnlineExaminationSystem/Areas/InstructorArea/Views/Questions/Edit.cshtml
+++ b/OnlineExaminationSystem/Areas/InstructorArea/Views/Questions/Edit.cshtml
@@ -9,7 +9,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Question</h4>
         <hr />
@@ -50,5 +50,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = Model.ChapterId })
 </div>
