--- a/OnlineExaminationSystem/Areas/InstructorArea/Views/Shared/_Layout.cshtml
+++ b/OnlineExaminationSystem/Areas/InstructorArea/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     @Styles.Render("~/Content/font-awesome")
     @Styles.Render("~/Content/custom")
     @Styles.Render("~/Content/dataTables")
+    @Styles.Render("~/Content/component")
     @Styles.Render("~/Content/morris")
     @Scripts.Render("~/bundles/modernizr")
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
